--- a/OOP-Project/MainWindow.xaml
+++ b/OOP-Project/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="350">
     <Grid>
-        <Button x:Name="btnUser" Content="User" HorizontalAlignment="Left" Margin="75,222,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24"/>
-        <Button x:Name="btnAdmin" Content="Admin" HorizontalAlignment="Left" Margin="75,305,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24"/>
+        <Button x:Name="btnUser" Content="User" HorizontalAlignment="Left" Margin="75,222,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24" Click="btnUser_Click"/>
+        <Button x:Name="btnAdmin" Content="Admin" HorizontalAlignment="Left" Margin="75,305,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24" Click="btnAdmin_Click"/>
         <Image Margin="75,10,88,242" Source="Image1.png" Stretch="Fill"/>
         <TextBlock x:Name="lblLogin" HorizontalAlignment="Left" Margin="100,151,0,0" TextWrapping="Wrap" Text="Login" VerticalAlignment="Top" FontSize="50" FontFamily="Segoe UI Semibold"/>
     </Grid>
