--- a/OOP-Project/CreateAccount.xaml
+++ b/OOP-Project/CreateAccount.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOP_Project"
         mc:Ignorable="d"
-        Title="CreateAccount" Height="450" Width="800">
+        Title="CreateAccount" Height="520.8" Width="565">
     <Grid>
-        
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="468" Margin="10,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="300"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="150" Margin="350,173,0,0" Stroke="Black" VerticalAlignment="Top" Width="200"/>
+        <Button x:Name="btnCreate" Content="Create Account" HorizontalAlignment="Left" Margin="350,360,0,0" VerticalAlignment="Top" Width="198" Height="50" FontSize="24"/>
+        <Label Content="Initial Balance" HorizontalAlignment="Left" Margin="376,186,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Image HorizontalAlignment="Left" Height="145" Margin="350,0,0,336.2" VerticalAlignment="Bottom" Width="149" Source="Icons/euro_icon.jpg"/>
+        <TextBox x:Name="txtBalance" HorizontalAlignment="Left" Height="38" Margin="376,250,0,0" TextWrapping="Wrap" Text="€0.0" VerticalAlignment="Top" Width="155" FontSize="24"/>
+        <Label Content="First Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="Surname" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="Email" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="25" Margin="10,42,0,0" TextWrapping="Wrap" Text="John...." VerticalAlignment="Top" Width="155" FontSize="16"/>
+        <TextBox x:Name="txtSurname" HorizontalAlignment="Left" Height="25" Margin="10,99,0,0" TextWrapping="Wrap" Text="Smith..." VerticalAlignment="Top" Width="155" FontSize="16"/>
+        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="25" Margin="10,156,0,0" TextWrapping="Wrap" Text="jsmith@gmail.com..." VerticalAlignment="Top" Width="274" FontSize="16"/>
+        <Label Content="Phone" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="25" Margin="10,213,0,0" TextWrapping="Wrap" Text="083 485 4562..." VerticalAlignment="Top" Width="155" FontSize="16"/>
+        <Label Content="Address Line 1" HorizontalAlignment="Left" Margin="10,238,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="Address Line 2" HorizontalAlignment="Left" Margin="10,295,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="City" HorizontalAlignment="Left" Margin="10,352,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox x:Name="txtEmail_Copy1" HorizontalAlignment="Left" Height="25" Margin="10,270,0,0" TextWrapping="Wrap" Text="123 Gold Street..." VerticalAlignment="Top" Width="155" FontSize="16"/>
+        <TextBox x:Name="txtEmail_Copy" HorizontalAlignment="Left" Height="25" Margin="10,327,0,0" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Width="155" FontSize="16"/>
+        <TextBox x:Name="txtEmail_Copy2" HorizontalAlignment="Left" Height="25" Margin="10,384,0,0" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Width="114" FontSize="16"/>
+        <ComboBox x:Name="cmbCounty" HorizontalAlignment="Left" Margin="10,441,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
+        <Label Content="County" HorizontalAlignment="Left" Margin="10,409,0,0" VerticalAlignment="Top" FontSize="16"/>
+
     </Grid>
 </Window>
