--- a/OOP-Project/MainWindow.xaml
+++ b/OOP-Project/MainWindow.xaml
@@ -1,15 +1,18 @@
-﻿<Window x:Class="OOP_Project.MainWindow"
+﻿<Window x:Name="windowUserLogin" x:Class="OOP_Project.UserLogin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOP_Project"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="350">
+        Title="UserLogin" Height="550" Width="350">
     <Grid>
-        <Button x:Name="btnUser" Content="User" HorizontalAlignment="Left" Margin="75,222,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24" Click="btnUser_Click"/>
-        <Button x:Name="btnAdmin" Content="Admin" HorizontalAlignment="Left" Margin="75,305,0,0" VerticalAlignment="Top" Width="181" Height="65" FontSize="24" Click="btnAdmin_Click"/>
-        <Image Margin="75,10,88,242" Source="Image1.png" Stretch="Fill"/>
-        <TextBlock x:Name="lblLogin" HorizontalAlignment="Left" Margin="100,151,0,0" TextWrapping="Wrap" Text="Login" VerticalAlignment="Top" FontSize="50" FontFamily="Segoe UI Semibold"/>
+        <Label x:Name="lblUsername" Content="Username" HorizontalAlignment="Left" Margin="30,158,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="lblPassword" Content="Password" HorizontalAlignment="Left" Margin="30,264,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Image Margin="74,0,89,367.8" Source="Icons/card_icon1.png" Stretch="Fill"/>
+        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="36,401,0,0" VerticalAlignment="Top" Width="245" Height="85" FontSize="36" Click="btnLogin_Click" Cursor="Hand" Background="#FF00C4EA" Foreground="Black"/>
+        <Button x:Name="btnCreateAccount" Content="Don't have an account? Create one" HorizontalAlignment="Left" Margin="48,377,0,0" VerticalAlignment="Top" Width="207" Background="#00DDDDDD" BorderBrush="#00707070" Foreground="#FF0071FF" FontWeight="Bold" FontStyle="Italic" Click="btnCreateAccount_Click" Cursor="Hand"/>
+        <PasswordBox x:Name="pbPassword" HorizontalAlignment="Left" Margin="36,306,0,0" VerticalAlignment="Top" Height="45" Width="245" FontSize="36" BorderBrush="#FF00C4EA"/>
+        <TextBox HorizontalAlignment="Left" Height="45" Margin="36,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="245" FontSize="36" TextChanged="TextBox_TextChanged" BorderBrush="#FF00C4EA"/>
     </Grid>
 </Window>
