--- a/OOP-Project/ActionMenu.xaml
+++ b/OOP-Project/ActionMenu.xaml
@@ -8,7 +8,7 @@
         Title="ActionMenu" Height="450" Width="800">
     <Grid>
         <StackPanel x:Name="ActionStackPanel" HorizontalAlignment="Left" Height="40" Margin="0,0,-0.4,0" VerticalAlignment="Top" FlowDirection="LeftToRight" Width="794" Background="#FF00D6FF" OpacityMask="#FF00FAFF">
-            <Menu x:Name="ActionMenu1" Height="40" Margin="0,0,-0.4,0" OpacityMask="#7F000000">
+            <Menu x:Name="ActionMenu1" Height="40" Margin="0,0,-0.4,0" OpacityMask="#7F000000" BorderBrush="Black">
 
                 <MenuItem Header="Accounts" Height="40" Width="90" Background="#FF00C4EA" Cursor="Hand" BorderBrush="#00000000"  Foreground="Black">
                     <StackPanel Width="190" Height="30">
