--- a/OOP-Project/ActionMenu.xaml
+++ b/OOP-Project/ActionMenu.xaml
@@ -11,49 +11,41 @@
             <Menu x:Name="ActionMenu1" Height="40" Margin="0,0,-0.4,0" OpacityMask="#7F000000" BorderBrush="Black">
 
                 <MenuItem Header="Accounts" Height="40" Width="90" Background="#FF00C4EA" Cursor="Hand" BorderBrush="#00000000"  Foreground="Black">
-                    <StackPanel Width="190" Height="30">
-                        <Button x:Name="btnAddAccount" Content="Add Account" Height="20" Width="78" Click="SettingsButton_Click"  Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
-                    </StackPanel>
-                    <StackPanel Height="21" Width="157">
-                        <Button x:Name="btnEditAccount" Content="Edit Account" Height="30" Width="auto" Click="SettingsButton_Click" Cursor="Hand"  Background="#00DDDDDD" BorderBrush="#00707070"/>
-                    </StackPanel>
-                    <StackPanel>
-                        <Button x:Name="btnLogOut" Content="Log Out" Height="25" Width="auto" Click="SettingsButton_Click" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
-                    </StackPanel>
+                    <Button x:Name="btnAddAccount" Content="Add Account" Height="20" Width="78" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnAddAccount_Click"/>
+                    <Button x:Name="btnEditAccount" Content="Edit Account" Height="30" Width="auto" Cursor="Hand"  Background="#00DDDDDD" BorderBrush="#00707070" Click="btnEditAccount_Click"/>
+                    <Button x:Name="btnLogOut" Content="Log Out" Height="25" Width="auto" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnLogOut_Click"/>
                 </MenuItem>
                 
                 <MenuItem Header="Services" Height="40" Width="90" Background="#FF00C4EA" Cursor="Hand" BorderBrush="#00000000" Foreground="Black">
                     <StackPanel>
-                        <Button x:Name="btnTransferFunds" Content="Transfer Funds" Height="25" Width="auto" Click="SettingsButton_Click" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
+                        <Button x:Name="btnTransferFunds" Content="Transfer Funds" Height="25" Width="auto" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnTransferFunds_Click"/>
 
                     </StackPanel>
                     <StackPanel>
-                        <Button x:Name="btnWithdrawFunds" Content="Withdraw Funds" Height="25" Width="auto" Click="SettingsButton_Click" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
+                        <Button x:Name="btnWithdrawFunds" Content="Withdraw Funds" Height="25" Width="auto" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnWithdrawFunds_Click"/>
 
                     </StackPanel>
                     <StackPanel>
-                        <Button x:Name="btnDepositFunds" Content="Deposit Funds" Height="25" Width="auto" Click="SettingsButton_Click" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
+                        <Button x:Name="btnDepositFunds" Content="Deposit Funds" Height="25" Width="auto" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnDepositFunds_Click"/>
 
                     </StackPanel>
                     <StackPanel>
-                        <Button x:Name="btnViewTransactionHistory" Content="Transaction History" Height="25" Width="auto" Click="SettingsButton_Click" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070"/>
+                        <Button x:Name="btnViewTransactionHistory" Content="Transaction History" Height="25" Width="auto" Cursor="Hand" Background="#00DDDDDD" BorderBrush="#00707070" Click="btnViewTransactionHistory_Click"/>
 
                     </StackPanel>
                 </MenuItem>
                 
-                <MenuItem Header="Settings" Height="40" Width="90" Background="#FF00C4EA" Click="MenuItem_Click_1" Cursor="Hand" BorderBrush="#00000000" Foreground="Black">
+                <!--<MenuItem Header="Settings" Height="40" Width="90" Background="#FF00C4EA" Click="MenuItem_Click_1" Cursor="Hand" BorderBrush="#00000000" Foreground="Black">
                     <Button x:Name="btnSettings" Content="Settings" Height="25" Width="auto" Click="SettingsButton_Click" Background="#00DDDDDD" BorderBrush="#00707070"/>
                     <Button x:Name="btnHelp" Content="Help" Height="25" Width="auto" Click="SettingsButton_Click" Background="#00DDDDDD" BorderBrush="#00707070"/>
-                </MenuItem>
+                </MenuItem>-->
             </Menu>
 
         </StackPanel>
         <DataGrid HorizontalAlignment="Left" Height="365" Margin="10,45,0,0" VerticalAlignment="Top" Width="676" Foreground="Black" BorderBrush="#FF00C4EA"/>
         <StackPanel>
-            <Button Content="Sort by Largest" HorizontalAlignment="Left" Margin="691,45,0,0" VerticalAlignment="Top" Width="93" Height="40" Cursor="Hand" Background="#FF00C4EA" Foreground="Black"/>
-            <Button Content="Sort by Smallest" HorizontalAlignment="Left" Margin="691,10,0,0" VerticalAlignment="Top" Width="93" Height="40" Cursor="Hand" Background="#FF00C4EA"/>
-            <Button Content="idk" HorizontalAlignment="Left" Margin="691,10,0,0" VerticalAlignment="Top" Width="93" Height="40" Cursor="Hand" Background="#FF00C4EA"/>
-        </StackPanel>
+              <Button x:Name="btnRefresh" Content="Refresh" HorizontalAlignment="Left" Margin="691,45,0,0" VerticalAlignment="Top" Width="93" Height="40" Cursor="Hand" Background="#FF00C4EA"/>
+         </StackPanel>
 
     </Grid>
 </Window>
