--- a/OOP-Project/CreateAccount.xaml
+++ b/OOP-Project/CreateAccount.xaml
@@ -5,44 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOP_Project"
         mc:Ignorable="d"
-        Title="CreateAccount" Height="614.4" Width="565">
+        Title="CreateAccount" Height="547.2" Width="565">
     <Grid>
-        <DockPanel Margin="333,352,25.4,-18.8">
+        <DockPanel Margin="335,290,23.4,61.4">
             <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="150" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
-            <TextBox x:Name="txtBalance" HorizontalAlignment="Left" Height="38" Margin="-175,70,0,0" TextWrapping="Wrap" Text="€0.0" VerticalAlignment="Top" Width="155" FontSize="24"/>
+            <TextBox x:Name="txtBalance" HorizontalAlignment="Left" Height="38" Margin="-175,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="24"/>
             <Label Content="Initial Balance" HorizontalAlignment="Left" Margin="-175,20,0,0" VerticalAlignment="Top" FontSize="24"/>
         </DockPanel>
-        <DockPanel Margin="333,10,25.4,281.8">
-            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="283" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
-            <TextBox x:Name="txtUsername" HorizontalAlignment="Left" Height="38" Margin="-170,70,0,0" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Width="148" FontSize="24"/>
-            <Label Content="Username" HorizontalAlignment="Left" Margin="-175,20,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <Label Content="Password" HorizontalAlignment="Left" Margin="-175,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <PasswordBox Height="35" VerticalAlignment="Top" Width="149" Margin="-190,150,0,0"/>
-            <Label Content="Confirm Password" HorizontalAlignment="Left" Margin="-175,200,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <PasswordBox Height="35" VerticalAlignment="Top" Width="149" Margin="-190,230,0,0"/>
-        </DockPanel>
-        <DockPanel Margin="0,0,254.4,-0.2">
-            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="485" Margin="10,10,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="293"/>
+
+        <DockPanel Margin="10,10,244.4,-10.2">
+            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="485" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="293"/>
             <Label Content="First Name" HorizontalAlignment="Left" Margin="-290,10,0,0" VerticalAlignment="Top" FontSize="16"/>
             <Label Content="Surname" HorizontalAlignment="Left" Margin="-290,67,0,0" VerticalAlignment="Top" FontSize="16"/>
             <Label Content="Email" HorizontalAlignment="Left" Margin="-290,124,0,0" VerticalAlignment="Top" FontSize="16"/>
-            <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="25" Margin="-290,42,0,0" TextWrapping="Wrap" Text="John...." VerticalAlignment="Top" Width="155" FontSize="16"/>
-            <TextBox x:Name="txtSurname" HorizontalAlignment="Left" Height="25" Margin="-290,99,0,0" TextWrapping="Wrap" Text="Smith..." VerticalAlignment="Top" Width="155" FontSize="16"/>
-            <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="25" Margin="-290,156,0,0" TextWrapping="Wrap" Text="jsmith@gmail.com..." VerticalAlignment="Top" Width="274" FontSize="16"/>
+            <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="25" Margin="-290,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="16"/>
+            <TextBox x:Name="txtSurname" HorizontalAlignment="Left" Height="25" Margin="-290,99,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="16"/>
+            <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="25" Margin="-290,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" FontSize="16"/>
             <Label Content="Phone" HorizontalAlignment="Left" Margin="-290,181,0,0" VerticalAlignment="Top" FontSize="16"/>
-            <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="25" Margin="-290,213,0,0" TextWrapping="Wrap" Text="083 485 4562..." VerticalAlignment="Top" Width="155" FontSize="16"/>
+            <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="25" Margin="-290,213,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="16"/>
             <Label Content="Address Line 1" HorizontalAlignment="Left" Margin="-290,238,0,0" VerticalAlignment="Top" FontSize="16"/>
             <Label Content="Address Line 2" HorizontalAlignment="Left" Margin="-290,295,0,0" VerticalAlignment="Top" FontSize="16"/>
             <Label Content="City" HorizontalAlignment="Left" Margin="-290,352,0,0" VerticalAlignment="Top" FontSize="16"/>
-            <TextBox x:Name="txtEmail_Copy1" HorizontalAlignment="Left" Height="25" Margin="-290,270,0,0" TextWrapping="Wrap" Text="123 Gold Street..." VerticalAlignment="Top" Width="155" FontSize="16"/>
-            <TextBox x:Name="txtEmail_Copy" HorizontalAlignment="Left" Height="25" Margin="-290,327,0,0" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Width="155" FontSize="16"/>
-            <TextBox x:Name="txtEmail_Copy2" HorizontalAlignment="Left" Height="25" Margin="-290,384,0,0" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Width="114" FontSize="16"/>
-            <ComboBox x:Name="cmbCounty" HorizontalAlignment="Left" Margin="-290,441,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
-            <Label Content="County" HorizontalAlignment="Left" Margin="-290,409,0,0" VerticalAlignment="Top" FontSize="16"/>
-
+            <TextBox x:Name="txtAdd1" HorizontalAlignment="Left" Height="25" Margin="-290,270,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="16"/>
+            <TextBox x:Name="txtAdd2" HorizontalAlignment="Left" Height="25" Margin="-290,327,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="16"/>
+            <TextBox x:Name="txtCity" HorizontalAlignment="Left" Height="25" Margin="-290,384,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="114" FontSize="16"/>
+            <ComboBox x:Name="cmbCounty" HorizontalAlignment="Left" Margin="-130,384,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
+            <Label Content="County" HorizontalAlignment="Left" Margin="-130,352,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Label Content="Sort Code" HorizontalAlignment="Left" Margin="-290,422,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <TextBox x:Name="txtSortCode" HorizontalAlignment="Left" Height="25" Margin="-290,450,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="114" FontSize="16" Text="101010" IsReadOnly="True"/>
         </DockPanel>
-        <Button x:Name="btnCreate" Content="Create Account" HorizontalAlignment="Left" Margin="335,525,0,0" VerticalAlignment="Top" Width="198" Height="50" FontSize="24" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnCreate_Click"/>
 
-        
+        <DockPanel Margin="335,135,0,0">
+            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="150" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
+            <TextBox x:Name="txtOverdraft" HorizontalAlignment="Left" Height="38" Margin="-175,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="24"/>
+            <Label Content="Overdraft" HorizontalAlignment="Left" Margin="-175,20,0,0" VerticalAlignment="Top" FontSize="24"/>
+        </DockPanel>
+        <DockPanel Margin="335,30,0.4,-45.4">
+            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="97" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
+            <RadioButton x:Name="rdoCurrent" Margin="-270,70,0,435.8" Width="66" Content="Current" />
+            <RadioButton x:Name="rdoSavings" Margin="-120,70,0,435.8" Width="66" Content="Savings" />
+            <Label Content="Account Type" HorizontalAlignment="Left" Margin="-175,20,0,0" VerticalAlignment="Top" FontSize="24"/>
+        </DockPanel>
+        <Button x:Name="btnCreate" Content="Create Account" HorizontalAlignment="Left" Margin="335,449,0,0" VerticalAlignment="Top" Width="198" Height="50" FontSize="24" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnCreate_Click"/>
+
+
     </Grid>
 </Window>
