Second half of the SQL connection updated plus Panel updates

--- a/OOP-Project/CreateUser.xaml
+++ b/OOP-Project/CreateUser.xaml
@@ -8,14 +8,15 @@
         Title="CreateUser" Height="450" Width="230.135">
     <Grid>
         <DockPanel Margin="10,10,10.2,29">
-            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="302" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
+            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="319" Margin="0,0,0,0" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="200"/>
             <TextBox x:Name="txtUsername" HorizontalAlignment="Left" Height="38" Margin="-170,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="148" FontSize="24"/>
             <Label Content="Username" HorizontalAlignment="Left" Margin="-175,20,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Label Content="Password" HorizontalAlignment="Left" Margin="-175,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <PasswordBox Height="35" VerticalAlignment="Top" Width="149" Margin="-190,150,0,0"/>
+            <PasswordBox x:Name="pbPassword" Height="35" VerticalAlignment="Top" Width="149" Margin="-190,150,0,0"/>
             <Label Content="Re-enter Password" HorizontalAlignment="Left" Margin="-175,200,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <PasswordBox Height="35" VerticalAlignment="Top" Width="149" Margin="-190,230,0,0"/>
+            <PasswordBox x:Name="pbPasswordCheck" Height="35" VerticalAlignment="Top" Width="149" Margin="-190,230,0,0" TextInput="pbPasswordCheck_TextInput"/>
             <CheckBox x:Name="cbPasswordCheck" Content="Password Matches" HorizontalAlignment="Left" Margin="-150,270,0,0" VerticalAlignment="Top" Height="23" Width="122" />
+            <TextBlock x:Name="txtStatus" Text="" Width="193" Margin="-200,293,0,61.8" TextAlignment="Center"/>
         </DockPanel>
         <Button x:Name="btnTransfer" Content="Create User" Margin="10,341,10,10" FontSize="30" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnCreate_Click"/>
 
