--- a/OOP-Project/FundManager.xaml
+++ b/OOP-Project/FundManager.xaml
@@ -11,15 +11,33 @@
             <TabItem x:Name="tabTransfer" Header="Transfer Funds">
                 <Grid Background="#FFE5E5E5">
                     <DockPanel HorizontalAlignment="Left" Height="372" LastChildFill="False" VerticalAlignment="Top" Width="769" Margin="0,0,0,0">
-                        <StackPanel Margin="0,0,0,292" Width="150" Height="80" Background="White">
+                        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="372" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="769"/>
+
+                        <StackPanel Margin="-730,20,0,269" Width="150" Background="White" HorizontalAlignment="Left">
                             <Label Content="Transfer From:" Height="31" VerticalAlignment="Top"/>
                             <ComboBox Height="22" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="10,10,0,0"/>
                         </StackPanel>
-                        <StackPanel Width="150" Margin="-150,0,0,64" Height="80" Background="White">
+                        <StackPanel Width="320" Margin="-750,20,0,269" Background="White">
+                            <Label Content="Account Owner" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <TextBox x:Name="txtAccountTransferFrom" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="0,0,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                            <Label Content="Current Balance" HorizontalAlignment="Left" Margin="170,-75,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <TextBox x:Name="txtBalanceTransferFrom" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="0,-35,0,0" Width="146" HorizontalAlignment="Right" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        </StackPanel>
+                        <StackPanel Width="320" Margin="-750,125,0,168" Background="White">
+                            <Label Content="Account Owner" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <TextBox x:Name="txtAccountTransferTo" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="0,0,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                            <Label Content="Current Balance" HorizontalAlignment="Left" Margin="170,-75,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <TextBox x:Name="txtBalanceTransferTo" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="0,-35,0,0" Width="146" HorizontalAlignment="Right" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        </StackPanel>
+                        <StackPanel Width="150" Margin="-730,20,0,64" Height="80" Background="White" HorizontalAlignment="Left">
                             <Label Content="Transfer From:" Height="31" VerticalAlignment="Top" Margin="10,0,0,0"/>
                             <ComboBox HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120"/>
                         </StackPanel>
-                        <Button x:Name="btnTransfer" Content="Transfer Funds" Margin="-140,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnTransfer_Click" />
+                        <StackPanel Width="146" Margin="-250,20,0,269" Background="White">
+                            <Label Content="Overdraft Limit" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <TextBox x:Name="txtOverdraftLimit" Height="38" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Margin="0,0,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                         </StackPanel>
+                        <Button x:Name="btnTransfer" Content="Transfer Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnTransfer_Click" HorizontalAlignment="Left" />
 
                     </DockPanel>
                 </Grid>
@@ -28,16 +46,35 @@
                 <Grid Background="#FFE5E5E5">
                     <DockPanel Margin="10,10,9.8,10">
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
-                        <ComboBox x:Name="cmbAccount" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
+                        <ComboBox x:Name="cmbAccountWithdraw" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <Label Content="Deposit Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
-                        <Label Content="Re-enter Password" HorizontalAlignment="Left" Margin="-175,200,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtAmountWithdraw" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
+                        <Label Content="Account Owner" HorizontalAlignment="Left" Margin="-500,20,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtAccountNameWithdraw" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <Label Content="Current Balance" HorizontalAlignment="Left" Margin="-500,120,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtBalanceWithdraw" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="-500,150,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <Button x:Name="btnWithdraw" Content="Withdraw Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" />
+
                     </DockPanel>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabDeposit" Header="Deposit Funds">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <DockPanel Margin="10,10,9.8,10">
+                        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
+                        <ComboBox x:Name="cmbAccountDeposit" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
+                        <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <Label Content="Deposit Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtAmountDeposit" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
+                        <Label Content="Account Owner" HorizontalAlignment="Left" Margin="-500,20,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtAccountNameDeposit" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <Label Content="Current Balance" HorizontalAlignment="Left" Margin="-500,120,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtBalanceDeposit" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="-500,150,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <Button x:Name="btnDeposit" Content="Deposit Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" />
+
+                    </DockPanel>
+                </Grid>
             </TabItem>
             <TabItem x:Name="tabHistory" Header="Transaction History">
                 <Grid Background="#FFE5E5E5">
